N°3542 Separate JS buttons from URL buttons

--- a/templates/base/components/button/buttonjs.html.twig
+++ b/templates/base/components/button/buttonjs.html.twig
@@ -1,10 +1,14 @@
 <button id="{{ oUIBlock.GetId() }}"
         class="ibo-button ibo-is-{{ oUIBlock.GetActionType() }} ibo-is-{{ oUIBlock.GetColor() }} {{ oUIBlock.GetAdditionalCSSClassesAsString() }}{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}"
         {% if oUIBlock.GetDataAttributes() %}
-                {% for sName, sValue in oUIBlock.GetDataAttributes() %}
-                        data-{{ sName }}="{{ sValue }}"
-                {% endfor %}
+            {% for sName, sValue in oUIBlock.GetDataAttributes() %}
+                data-{{ sName }}="{{ sValue }}"
+            {% endfor %}
         {% endif %}
+        type="{{ oUIBlock.GetType() }}"
+        name="{{ oUIBlock.GetName() }}"
+        value="{{ oUIBlock.GetValue() }}"
+        {% if oUIBlock.IsDisabled() %} disabled {% endif %}
         {% if oUIBlock.GetTooltip() is not empty %} data-tooltip-content="{{ oUIBlock.GetTooltip() }}" {% endif %}
 >
     {% if oUIBlock.GetIconClass() is not empty %}
