--- a/css/backoffice/components/dashlet/_dashlet-header-static.scss
+++ b/css/backoffice/components/dashlet/_dashlet-header-static.scss
@@ -4,14 +4,13 @@
  */
 
 /* SCSS variables */
+$ibo-dashlet-header-static--padding-top: 16px !default;
+$ibo-dashlet-header-static--padding-bottom: 0 !default;
 $ibo-dashlet-header-static--padding-x: 16px !default;
-$ibo-dashlet-header-static--padding-y: 16px !default;
-$ibo-dashlet-header-static--min-width: 200px !default;
-$ibo-dashlet-header-static--background-color: $ibo-color-white-100 !default;
-$ibo-dashlet-header-static--border: 1px solid $ibo-color-grey-400 !default;
-$ibo-dashlet-header-static--border-radius: $ibo-border-radius-500 !default;
 
-$ibo-dashlet-header-static--title--text-color: inherit !default;
+$ibo-dashlet-header-static--body--margin-left: 48px !default;
+$ibo-dashlet-header-static--body--text-color: $ibo-color-grey-900 !default;
+
 $ibo-dashlet-header-static--title--margin-right: 8px !default;
 
 $ibo-dashlet-header-static--text--text-color: inherit !default;
@@ -19,43 +18,55 @@ $ibo-dashlet-header-static--text--text-color: inherit !default;
 $ibo-dashlet-header-static--icon-container--margin-right: 16px !default;
 $ibo-dashlet-header-static--icon--size: 48px !default;
 
+$ibo-dashlet-header-static--body--separator--top: 50% !default;
+$ibo-dashlet-header-static--body--separator--top: 50% !default;
+$ibo-dashlet-header-static--body--separator--width: 1000% !default;
+$ibo-dashlet-header-static--body--separator--height: 1px !default;
+$ibo-dashlet-header-static--body--separator--border: 2px solid $ibo-color-grey-400 !default;
+$ibo-dashlet-header-static--body--separator-before--right: calc(100% + #{$ibo-dashlet-header-static--icon-container--margin-right}) !default;
+$ibo-dashlet-header-static--body--separator-after--left: calc(100% + #{$ibo-dashlet-header-static--icon-container--margin-right}) !default;
+
 
 /* Rules */
 .ibo-dashlet-header-static {
-	//min-width: $ibo-dashlet-header-static--min-width;
-	flex-basis: $ibo-dashlet-header-static--min-width;
-	flex-grow: 1;
-	flex-shrink: 1;
-	padding: $ibo-dashlet-header-static--padding-y $ibo-dashlet-header-static--padding-x;
-	background-color: $ibo-dashlet-header-static--background-color;
-	border: $ibo-dashlet-header-static--border;
-	border-radius: $ibo-dashlet-header-static--border-radius;
+	padding: $ibo-dashlet-header-static--padding-top $ibo-dashlet-header-static--padding-x $ibo-dashlet-header-static--padding-bottom $ibo-dashlet-header-static--padding-x;
+  overflow-x: hidden; /* To hide separator extra length */
 }
 
 .ibo-dashlet-header-static--body {
-	display: flex;
+  position: relative;
+	display: inline-flex;
 	justify-items: left;
 	align-items: center;
+  margin-left: $ibo-dashlet-header-static--body--margin-left;
+
+  color: $ibo-dashlet-header-static--body--text-color;
+  @extend %ibo-font-ral-med-350;
+
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+    top: $ibo-dashlet-header-static--body--separator--top;
+    width: $ibo-dashlet-header-static--body--separator--width;
+    height: $ibo-dashlet-header-static--body--separator--height;
+    border-bottom: $ibo-dashlet-header-static--body--separator--border;
+  }
+  &::before{
+    right: $ibo-dashlet-header-static--body--separator-before--right;
+  }
+  &::after{
+    left: $ibo-dashlet-header-static--body--separator-after--left;
+  }
 }
 
 .ibo-dashlet-header-static--icon-container {
 	margin-right: $ibo-dashlet-header-static--icon-container--margin-right;
+  @extend %ibo-fully-centered-content;
 }
 
 .ibo-dashlet-header-static--icon {
 	width: $ibo-dashlet-header-static--icon--size;
 	min-width: $ibo-dashlet-header-static--icon--size; /* To avoid image being shrinked when container is too small */
 	max-height: $ibo-dashlet-header-static--icon--size;
-}
-
-.ibo-dashlet-header-static--title {
-	@extend %ibo-font-ral-med-250;
-	color: $ibo-dashlet-header-static--title--text-color;
-	margin-right: $ibo-dashlet-header-static--title--margin-right;
-}
-
-.ibo-dashlet-header-static--text {
-	@extend %ibo-font-ral-nor-200;
-	flex-grow: 1;
-	color: $ibo-dashlet-header-static--text--text-color;
 }
