--- a/templates/base/components/dashlet/dashlet-header-static.html.twig
+++ b/templates/base/components/dashlet/dashlet-header-static.html.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    <div class="ibo-dashlet-header-static{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}" id="{{ oUIBlock.GetId() }}">
+    <div id="{{ oUIBlock.GetId() }}" class="ibo-dashlet-header-static {% if oUIBlock.IsHidden() %}ibo-is-hidden{% endif %}" data-role="ibo-dashlet-header-static">
         <div class="ibo-dashlet-header-static--body">
             {% if oUIBlock.GetIconUrl() is not empty %}
                 <div class="ibo-dashlet-header-static--icon-container">
