--- a/css/backoffice/components/dashlet/_dashlet-badge.scss
+++ b/css/backoffice/components/dashlet/_dashlet-badge.scss
@@ -7,13 +7,13 @@
 $ibo-dashlet-badge--padding-x: 16px !default;
 $ibo-dashlet-badge--padding-y: 16px !default;
 $ibo-dashlet-badge--min-width: 200px !default;
+$ibo-dashlet-badge--max-width: 350px !default;
 $ibo-dashlet-badge--background-color: $ibo-color-white-100 !default;
 $ibo-dashlet-badge--border: 1px solid $ibo-color-grey-400 !default;
 $ibo-dashlet-badge--border-radius: $ibo-border-radius-500 !default;
 
 $ibo-dashlet-badge--action-list--text-color: inherit !default;
 $ibo-dashlet-badge--action-list-count--margin-right: 8px !default;
-$ibo-dashlet-badge--action-list-label--max-width: 150px !default;
 
 $ibo-dashlet-badge--icon-container--margin-right: 16px !default;
 $ibo-dashlet-badge--icon--size: 48px !default;
@@ -21,9 +21,10 @@ $ibo-dashlet-badge--icon--size: 48px !default;
 $ibo-dashlet-badge--action-icon--margin-right: 6px !default;
 
 /* Rules */
-.ibo-dashlet-badge{
+.ibo-dashlet-badge {
+  max-width: $ibo-dashlet-badge--max-width;
   //min-width: $ibo-dashlet-badge--min-width;
-  flex-basis: $ibo-dashlet-badge--min-width;
+  flex-basis: $ibo-dashlet-badge--min-width; /* flex basis/grow/shrink allow the badges to occupy the line as much as possible to avoid having a void at the end of it. This way everything seems to fill the screen smoothly */
   flex-grow: 1;
   flex-shrink: 1;
   padding: $ibo-dashlet-badge--padding-y $ibo-dashlet-badge--padding-x;
@@ -31,32 +32,37 @@ $ibo-dashlet-badge--action-icon--margin-right: 6px !default;
   border: $ibo-dashlet-badge--border;
   border-radius: $ibo-dashlet-badge--border-radius;
 }
-.ibo-dashlet-badge--body{
-	display: flex;
-	justify-items: left;
-	align-items: center;
-}
-.ibo-dashlet-badge--icon-container{
-	margin-right: $ibo-dashlet-badge--icon-container--margin-right;
-}
-.ibo-dashlet-badge--icon{
-	width: $ibo-dashlet-badge--icon--size;
-	min-width: $ibo-dashlet-badge--icon--size; /* To avoid image being shrinked when container is too small */
-	max-height: $ibo-dashlet-badge--icon--size;
+
+.ibo-dashlet-badge--body {
+  display: flex;
+  justify-items: left;
+  align-items: center;
 }
 
-.ibo-dashlet-badge--actions{
-
+.ibo-dashlet-badge--icon-container {
+  margin-right: $ibo-dashlet-badge--icon-container--margin-right;
 }
-.ibo-dashlet-badge--action-list{
-	@extend %ibo-vertically-centered-content;
-	color: $ibo-dashlet-badge--action-list--text-color;
-	@extend %ibo-font-ral-med-250;
 
-	&:hover,
-	&:active{
-		@extend %ibo-hyperlink-inherited-colors;
-	}
+.ibo-dashlet-badge--icon {
+  width: $ibo-dashlet-badge--icon--size;
+  min-width: $ibo-dashlet-badge--icon--size; /* To avoid image being shrinked when container is too small */
+  max-height: $ibo-dashlet-badge--icon--size;
+}
+
+.ibo-dashlet-badge--actions {
+  flex-grow: 1;
+  overflow-x: hidden;
+}
+
+.ibo-dashlet-badge--action-list {
+  @extend %ibo-vertically-centered-content;
+  color: $ibo-dashlet-badge--action-list--text-color;
+  @extend %ibo-font-ral-med-250;
+
+  &:hover,
+  &:active {
+    @extend %ibo-hyperlink-inherited-colors;
+  }
 }
 .ibo-dashlet-badge--action-list-count{
 	margin-right: $ibo-dashlet-badge--action-list-count--margin-right;
@@ -64,7 +70,6 @@ $ibo-dashlet-badge--action-icon--margin-right: 6px !default;
 }
 .ibo-dashlet-badge--action-list-label{
 	display: inline-block;
-	max-width: $ibo-dashlet-badge--action-list-label--max-width;
 	@extend %ibo-text-truncated-with-ellipsis;
 }
 .ibo-dashlet-badge--action-create{
