Introduce vertical separator for toolbar blocks

--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -24,8 +24,7 @@
 @import "form";
 @import "fieldset";
 @import "field";
-@import "toolbar";
-@import "toolbar-spacer";
+@import "toolbar/all";
 @import "richtext";
 @import "formtable";
 @import "formtablerow";
