--- a/templates/base/layouts/object/object-details/layout.html.twig
+++ b/templates/base/layouts/object/object-details/layout.html.twig
@@ -11,11 +11,11 @@
 
 {% block iboPanelSubTitle %}
     {% if oUIBlock.GetStatusLabel() is not empty %}
-        <span class="ibo-object-details--status" data-status-code="{{ oUIBlock.GetStatusCode() }}">
-            <span class="ibo-object-details--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}"></span>
-            <span class="ibo-object-details--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
+        <span class="ibo-object-details--status" data-role="ibo-object-details--status" data-status-code="{{ oUIBlock.GetStatusCode() }}">
+            <span class="ibo-object-details--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}" data-role="ibo-object-details--status-dot"></span>
+            <span class="ibo-object-details--status-label" data-role="ibo-object-details--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
         </span>
     {% endif %}
-    <span class="ibo-object-details--object-class">{{ oUIBlock.GetClassLabel() }}</span>
+    <span class="ibo-object-details--object-class" data-role="ibo-object-details--object-class">{{ oUIBlock.GetClassLabel() }}</span>
     {{ parent() }}
 {% endblock %}
