--- a/css/backoffice/layout/dashboard/_dashboard.scss
+++ b/css/backoffice/layout/dashboard/_dashboard.scss
@@ -7,16 +7,50 @@
 $ibo-dashboard--grid--width: 100% !default;
 $ibo-dashboard--grid--elements-spacing-x: $ibo-dashlet--elements-spacing-x !default;
 $ibo-dashboard--grid--elements-spacing-y: $ibo-dashlet--elements-spacing-y !default;
+$ibo-dashboard--top-bar-padding-bottom: 20px !default;
 
 /* Rules */
-.ibo-dashboard--content{
-	display: flex;
-	flex-direction: column;
+.ibo-dashboard--top-bar {
+  @extend %ibo-full-height-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: $ibo-dashboard--top-bar-padding-bottom;
+
+  .ibo-dashboard--top-bar-title {
+    @extend %ibo-font-ral-bol-250;
+  }
+
+  .ibo-dashboard--top-bar-toolbar {
+    display: flex;
+    align-items: center;
+  }
 }
-.ibo-dashboard--grid{
-	width: $ibo-dashboard--grid--width;
+
+.ibo-dashboard--selector {
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
+  margin-right: 1px;
+
+  &:hover {
+    background-color: $ibo-color-secondary-100;
+    border-radius: $ibo-button--border-radius;
+  }
+
+  .selector-label {
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    vertical-align: super;
+  }
 }
-.ibo-dashboard--grid-row{
+
+.ibo-dashboard--grid {
+  width: $ibo-dashboard--grid--width;
+}
+
+.ibo-dashboard--grid-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
