--- a/templates/base/components/datatable/static/formtable/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.ready.js.twig
@@ -8,6 +8,7 @@ var table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_
     filter: false,
     search: false,
     dom: "t",
+    "order": [],
 });
 if ($('#{{ oUIBlock.GetId() }}').find('thead').is(':visible'))
 {
