Fix core-update blank page

--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -4,7 +4,7 @@
 
 {% UIContentBlock Standard {'aContainerClasses':['ibo-update-core']} %}
 
-    {% UITitle ForPage {'sTitle':'iTopUpdate:UI:PageTitle'|dict_s} %}
+    {% UITitle ForPage {'sTitle':'iTopUpdate:UI:PageTitle'|dict_s} %}{% endUITitle %}
 
     <div class="ibo-v-spacer">&nbsp;</div>
 
