--- a/templates/base/components/datatable/static/formtable/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.ready.js.twig
@@ -6,9 +6,15 @@ var table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_
     scrollCollapse: true,
     paging: false,
     filter: false,
+    autoWidth: false,
     search: false,
     dom: "t",
     "order": [],
+    {% if oUIBlock.GetOption("select_mode") is not empty %}
+    select: {
+        style: "{{ oUIBlock.GetOption("select_mode") }}"
+    },
+    {% endif %}
 });
 if ($('#{{ oUIBlock.GetId() }}').find('thead').is(':visible'))
 {
