Add ButtonGroup block

--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -5,6 +5,7 @@
 
 @import "alert";
 @import "button";
+@import "button-group";
 @import "breadcrumbs";
 @import "collapsible-section";
 @import "quick-create";
