--- a/css/backoffice/pages/_audit.scss
+++ b/css/backoffice/pages/_audit.scss
@@ -44,7 +44,7 @@ $ibo-audit--status--color: (
       width: $ibo-audit--audit-rules--row--last-rows--width;
     }
   }
-  .ibo-datatable-toolbar{
+  .ibo-datatable--toolbar{
     display: none;
   }
   tr td:last-of-type:before{
