N°2737 - Migrate table to DataTables plugin in display objects

--- a/templates/base/components/datatable/static/formtable/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.ready.js.twig
@@ -11,9 +11,14 @@ var table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_
     dom: "t",
     "order": [],
     {% if oUIBlock.GetOption("select_mode") is not empty %}
+    {% if oUIBlock.GetOption("select_mode") !="custom" %}
     select: {
         style: "{{ oUIBlock.GetOption("select_mode") }}"
     },
+    {% endif %}
+    columnDefs: [
+        {orderable: false, targets: 0}
+    ],
     {% endif %}
 });
 if ($('#{{ oUIBlock.GetId() }}').find('thead').is(':visible'))
