--- a/templates/base/components/datatable/static/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/layout.ready.js.twig
@@ -35,18 +35,22 @@ $('#{{ oUIBlock.GetId() }}').DataTable({
     rowId: "id",
     filter: false,
     {% if oUIBlock.GetOption("pageLength") is not empty %}
-    pageLength: {{ oUIBlock.GetOptions()["pageLength"] }},
+    pageLength: {{ oUIBlock.GetOption("pageLength") }},
     {% endif %}
     {% if oUIBlock.GetData()|length <= iPageSize %}
     paging: false,
     {% endif %}
+    {% if oUIBlock.GetOption("dom") is not empty %}
+    dom: "<'ibo-datatable-toolbar'{{ oUIBlock.GetOption("dom") }}>t",
+    {% else %}
     dom: "<'ibo-datatable--toolbar'<'ibo-datatable--toolbar-left' pl><'ibo-datatable--toolbar-right' i>>t<'ibo-datatable--toolbar'<'ibo-datatable--toolbar-left' pl><'ibo-datatable--toolbar-right' i>>",
+    {% endif %}
     lengthMenu: [[ {{ iPageSize }},  {{ iPageSize*2 }},  {{ iPageSize*3 }}, {{ iPageSize*4 }}, -1], [ {{ iPageSize }},  {{ iPageSize*2 }},  {{ iPageSize*3 }}, {{ iPageSize*4 }}, "{{ 'UI:Datatables:Language:DisplayLength:All'|dict_s }}"]],
     columns: [
         {% for key, column in oUIBlock.GetColumns() %}
         {
             data: "{{ key }}",
-        	width: "auto",
+            width: "auto",
             sortable: true
         },
         {% endfor %}
