Advanced search: Add comment on its SCSS partial

--- a/css/backoffice/components/_search-form.scss
+++ b/css/backoffice/components/_search-form.scss
@@ -3,6 +3,8 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
+/* IMPORTANT: All the code below do NOT follow the coding convention and has NOT been refactored to the UIBlock system */
+
 .search_box {
 	box-sizing: border-box;
 	position: relative;
